<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/chartContainer">

    <TextView
            android:id="@+id/tvPriceChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="48dp"
            android:fontFamily="@font/montserrat"
            android:textSize="28sp"
            android:textColor="@color/colorBlack"
            android:textFontWeight="700"
            android:lineHeight="32dp"/>

    <TextView
            android:id="@+id/tvChangeChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_change"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceChart"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/montserrat"
            android:textSize="12sp"
            android:textColor="@color/colorGreen"
            android:textFontWeight="600"
            android:lineHeight="16dp"/>

    <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:layout_constraintTop_toBottomOf="@+id/tvChangeChart"/>


    <TextView
            android:id="@+id/tvDay"
            android:text="@string/d"
            style="@style/PeriodButtonNotSelected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvWeek"
            android:text="@string/w"
            style="@style/PeriodButtonNotSelected"
            app:layout_constraintStart_toEndOf="@+id/tvDay"
            app:layout_constraintTop_toBottomOf="@id/chart"
            app:layout_constraintEnd_toStartOf="@+id/tvMonth"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvMonth"
            android:text="@string/m"
            style="@style/PeriodButtonNotSelected"
            app:layout_constraintStart_toEndOf="@+id/tvWeek"
            app:layout_constraintTop_toBottomOf="@id/chart"
            app:layout_constraintEnd_toStartOf="@+id/tvSixMonth"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvSixMonth"
            android:text="@string/six_m"
            style="@style/PeriodButtonNotSelected"
            app:layout_constraintStart_toEndOf="@+id/tvMonth"
            app:layout_constraintTop_toBottomOf="@id/chart"
            app:layout_constraintEnd_toStartOf="@+id/tvYear"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvYear"
            android:text="@string/one_year"
            style="@style/PeriodButtonNotSelected"
            app:layout_constraintStart_toEndOf="@+id/tvSixMonth"
            app:layout_constraintTop_toBottomOf="@id/chart"
            app:layout_constraintEnd_toStartOf="@+id/tvAll"
            android:layout_marginTop="40dp"/>

    <TextView
            android:id="@+id/tvAll"
            android:text="@string/all"
            style="@style/PeriodButtonSelected"
            app:layout_constraintTop_toBottomOf="@id/chart"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"/>


    <Button
            android:id="@+id/buttonBuyFor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="16dp"
            android:background="@drawable/shape_button_buy_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="20dp"
            android:elevation="0dp"
            android:text="@string/buy_for"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/montserrat"
            android:textSize="16sp"
            android:textFontWeight="600"
            android:lineHeight="24dp"/>


    <LinearLayout
            android:id="@+id/balloonTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="12dp"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            android:background="@drawable/shape_button_buy_background"
            app:layout_constraintBottom_toTopOf="@id/balloonArrow"
            app:layout_constraintEnd_toEndOf="@id/balloonArrow"
            app:layout_constraintStart_toStartOf="@+id/balloonArrow">

        <TextView
                android:id="@+id/balloonPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_price"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="600"
                android:textSize="16sp"
                android:lineHeight="24dp"/>

        <TextView
                android:id="@+id/balloonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_date"
                android:layout_gravity="center"
                android:textColor="@color/colorGray"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="600"
                android:textSize="12sp"
                android:lineHeight="24dp"/>

    </LinearLayout>

    <View
            android:id="@+id/balloonArrow"
            android:layout_width="12dp"
            android:layout_height="6dp"
            android:background="@drawable/triangle"
            app:layout_constraintStart_toStartOf="@id/mainPixel"
            app:layout_constraintEnd_toEndOf="@id/mainPixel"
            app:layout_constraintBottom_toTopOf="@id/mainPixel"/>

    <View
        android:id="@+id/mainPixel"
        android:layout_width="1px"
        android:layout_height="1px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>