<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="28dp"
        app:cardElevation="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="6dp"
        app:cardBackgroundColor="@color/colorBG">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/containerNews"
            android:paddingBottom="8dp"
            android:animateLayoutChanges="true">

        <ImageView
                android:id="@+id/ivImageNews"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:scaleType="centerCrop"/>


        <TextView
                android:id="@+id/titleNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ivImageNews"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:paddingHorizontal="12dp"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="600"
                android:textColor="@color/colorBlack"
                android:lineHeight="16dp"
                android:textSize="16sp"/>

        <TextView
                android:id="@+id/textNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                app:layout_constraintTop_toBottomOf="@id/titleNews"
                app:layout_constraintStart_toStartOf="parent"
                android:paddingHorizontal="12dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="500"
                android:textColor="@color/colorBlack"
                android:lineHeight="16dp"
                android:textSize="12sp"
                android:visibility="gone"/>

        <TextView
                android:id="@+id/dateNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="12dp"
                android:text="@string/test_date"
                android:paddingBottom="10dp"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="600"
                android:textColor="@color/colorBlack"
                android:lineHeight="16dp"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>

        <TextView
                android:id="@+id/toWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/textNews"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="12dp"
                android:text="@string/to_website"
                android:paddingVertical="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/montserrat"
                android:textFontWeight="700"
                android:textColor="@color/colorBlack"
                android:lineHeight="16dp"
                android:textSize="16sp"
                android:visibility="gone"/>

        <ImageView
                android:id="@+id/arrowToWebsite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_to_right"
                app:layout_constraintStart_toEndOf="@+id/toWebsite"
                app:layout_constraintBottom_toBottomOf="@+id/toWebsite"
                app:layout_constraintTop_toTopOf="@+id/toWebsite"
                android:paddingVertical="14dp"
                android:paddingHorizontal="6dp"
                android:visibility="gone"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

